# manipulator_control_strategies

./: CMakeLists.txt  README.md  package.xml
manipulator_control_strategies/: __init__.py  load_dmps.py  send_to_pos.py
